1.8.29
------
(RB=169640)
Refactor IDL compatibility checking. Allow compatibility checking of referenced named Schemas.
Slightly alter some compatibility messages.

1.8.28
------
(RB=167736)
Fix interface definition generation for typerefs in action return types and refactor RestLiAnnotationReader
to make action validation easier to understand.

1.8.27
------
(RB=168797)
Revert eec968ddab745286a8c9e05e35f0ddeab011a947 "Refactoring changes for testing resource compatibility."
as it breaks rum publishRestModel with this message:
"No such property: summary for class: com.linkedin.restli.tools.idlcheck.RestLiResourceModelCompatibilityChecker"

1.8.26
------
(RB=167737)
Add RestClient.sendRestRequest(..., Callback<RestResponse> callback) method.

1.8.25
------
(RB=168185)
Add support for enum value documentation for data template generator.

(RB=164876)
Fix bug where client builders failed to coerce batch results for resource collections keyed by a typeref.

(RB=165359)
Use com.linkedin.restli.server.NoMetadata to mark a finder's CollectionResult as no metadata.
Allow non-template return type for finders.

(RB=166235)
IDL compatibility checks for new methods, finders, actions and subresources.

(RB=167736)
Fix idl generation to correctly handle typerefs in action responses.

1.8.23
------
(RB=162866)
Change FixedTemplate to output using ByteString.toString() instead of asAvroString
Add more test cases for generated DataTemplate.

(RB=163290)
Fix bug where @Optional on finder assocKeys was not respected.

(RB=164364)
Fix a bug in idl compatibility checker that marks previously required and currently optional field as incompatible.

(RB=126830)
Deprecate the "items" field for the query parameters in idl. Array parameters use standard pdsc array format.
To make it backwards compatibile, request builders can still use Iterable parameters.
Fix bug that builder methods with Iterable<? extends DataTemplate> parameter are not working.
Update build scripts.
Use Gradle 1.5.
